@@ -561,10 +561,15 @@ class RemotingServiceTestCase(unittest.TestCase):
 def suite():
     suite = unittest.TestSuite()
 
-    suite.addTest(unittest.makeSuite(ServiceMethodProxyTestCase))
-    suite.addTest(unittest.makeSuite(ServiceProxyTestCase))
-    suite.addTest(unittest.makeSuite(RequestWrapperTestCase))
-    suite.addTest(unittest.makeSuite(RemotingServiceTestCase))
+    test_cases = [
+        ServiceMethodProxyTestCase,
+        ServiceProxyTestCase,
+        RequestWrapperTestCase,
+        RemotingServiceTestCase
+    ]
+
+    for tc in test_cases:
+        suite.addTest(unittest.makeSuite(tc))
 
     return suite
 
